# nrf70

./: .gitmodules  Cargo.toml  build.rs  readme.md  rust-toolchain.toml  todo.md
example/: Cargo.toml
example/.cargo/: config.toml
example/src/: main.rs
scripts/: Cargo.toml
src/: action.rs  bindings.rs  bus.rs  control.rs  lib.rs  net.rs  rpu.rs  util.rs
src/net/: eth.rs
src/rpu/: commands.rs  firmware.rs  memory.rs  rf.rs
